set up game objects, general design, game frame, game loop, and asset singleton object